Add benchmark model with both sets of features

--- a/deskriptivna_explorativna_analyza.ipynb
+++ b/deskriptivna_explorativna_analyza.ipynb
@@ -889,7 +889,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>http://www.youtube.com/watch?v=1tRq8ExAHzk</td>\n",
+       "      <td>http://mo2no.com/just-my-dad-enjoying-this-tro...</td>\n",
        "      <td>{\"title\":\"Freebase Pancakes NOTCOT \",\"body\":\"n...</td>\n",
        "      <td>?</td>\n",
        "      <td>?</td>\n",
@@ -910,11 +910,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               url  \\\n",
-       "count                                         7395   \n",
-       "unique                                        7395   \n",
-       "top     http://www.youtube.com/watch?v=1tRq8ExAHzk   \n",
-       "freq                                             1   \n",
+       "                                                      url  \\\n",
+       "count                                                7395   \n",
+       "unique                                               7395   \n",
+       "top     http://mo2no.com/just-my-dad-enjoying-this-tro...   \n",
+       "freq                                                    1   \n",
        "\n",
        "                                              boilerplate alchemy_category  \\\n",
        "count                                                7395             7395   \n",
@@ -1804,7 +1804,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7596b128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1de583a20>"
       ]
      },
      "execution_count": 29,
@@ -1942,7 +1942,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca76a77d30>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e1ee58d0>"
       ]
      },
      "execution_count": 33,
@@ -1972,7 +1972,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca76b1c4e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e1f17ba8>"
       ]
      },
      "execution_count": 34,
@@ -2449,7 +2449,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca76bfc908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e202c7b8>"
       ]
      },
      "execution_count": 38,
@@ -2487,7 +2487,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca76bc47b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e1ff6a58>"
       ]
      },
      "execution_count": 39,
@@ -2587,7 +2587,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca76c60dd8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2183438>"
       ]
      },
      "execution_count": 42,
@@ -2617,7 +2617,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca76d83e48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e21ecf98>"
       ]
      },
      "execution_count": 43,
@@ -2717,7 +2717,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca76db5fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2008940>"
       ]
      },
      "execution_count": 46,
@@ -2754,7 +2754,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca76a550b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1dfde8748>"
       ]
      },
      "execution_count": 47,
@@ -2854,7 +2854,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca77e5aa90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e22bbf28>"
       ]
      },
      "execution_count": 50,
@@ -2884,7 +2884,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca77eae438>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e20085c0>"
       ]
      },
      "execution_count": 51,
@@ -2977,7 +2977,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca77f88080>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2322358>"
       ]
      },
      "execution_count": 54,
@@ -3014,7 +3014,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca77f93320>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e23eae10>"
       ]
      },
      "execution_count": 55,
@@ -3209,7 +3209,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca780df278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e253dcc0>"
       ]
      },
      "execution_count": 59,
@@ -3239,7 +3239,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca78159240>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e25bb4e0>"
       ]
      },
      "execution_count": 60,
@@ -3339,7 +3339,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca791fd4e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e26060f0>"
       ]
      },
      "execution_count": 63,
@@ -3419,7 +3419,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca791e7d68>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2533e80>"
       ]
      },
      "execution_count": 65,
@@ -3449,7 +3449,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca77ec8d68>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e265fda0>"
       ]
      },
      "execution_count": 66,
@@ -3631,7 +3631,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca791ba4a8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e26c1eb8>"
       ]
      },
      "execution_count": 72,
@@ -3661,7 +3661,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca792c1278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e273a438>"
       ]
      },
      "execution_count": 73,
@@ -3762,7 +3762,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7939be48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e28127b8>"
       ]
      },
      "execution_count": 76,
@@ -3792,7 +3792,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7940ca20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e28776d8>"
       ]
      },
      "execution_count": 77,
@@ -4085,7 +4085,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca79632e48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2aa4898>"
       ]
      },
      "execution_count": 87,
@@ -4115,7 +4115,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7956c860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e29e9eb8>"
       ]
      },
      "execution_count": 88,
@@ -4394,7 +4394,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca77f9d3c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2274cc0>"
       ]
      },
      "execution_count": 95,
@@ -4424,7 +4424,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca76be6f98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e27a9978>"
       ]
      },
      "execution_count": 96,
@@ -4525,7 +4525,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca79348358>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e29917f0>"
       ]
      },
      "execution_count": 99,
@@ -4555,7 +4555,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca79515128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2984898>"
       ]
      },
      "execution_count": 100,
@@ -4656,7 +4656,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7a774ac8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2c03400>"
       ]
      },
      "execution_count": 103,
@@ -4686,7 +4686,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7a682438>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2c75a20>"
       ]
      },
      "execution_count": 104,
@@ -4786,7 +4786,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7a7c8f60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2be9780>"
       ]
      },
      "execution_count": 107,
@@ -4816,7 +4816,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7a911f28>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2dac908>"
       ]
      },
      "execution_count": 108,
@@ -4917,7 +4917,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7a75dfd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2cd23c8>"
       ]
      },
      "execution_count": 111,
@@ -4947,7 +4947,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca794b87b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2e1e9b0>"
       ]
      },
      "execution_count": 112,
@@ -5059,7 +5059,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca7a86f278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e1e2125898>"
       ]
      },
      "execution_count": 115,
@@ -5122,7 +5122,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ca7afdd860>"
+       "<seaborn.axisgrid.PairGrid at 0x1e1e63e9e80>"
       ]
      },
      "execution_count": 117,
@@ -5354,7 +5354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5378,7 +5378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5389,7 +5389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -5407,7 +5407,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5418,7 +5418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5430,7 +5430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 143,
    "metadata": {
     "scrolled": true
    },
@@ -5441,7 +5441,7 @@
        "(5916, 11)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5452,7 +5452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -5461,7 +5461,7 @@
        "(1479, 11)"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5472,7 +5472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5857,7 +5857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5867,7 +5867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5879,7 +5879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5889,7 +5889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5899,7 +5899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -5908,13 +5908,225 @@
        "0.7971602434077079"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "accuracy_score(y_test_max, pred_tf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmark model\n",
+    "\n",
+    "Natrenujeme benchmarkovy model, ktory bude natrenovany na vsetkych atributoch. Jeho vysledky sa nasledne budeme snazit dosiahnut s minimom oznacenych dat s co-trainingom."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df.label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df.loc[:, feature_set_1_1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "X = pd.concat([df1, pd.DataFrame(tf_idf_1000)], axis=1, join_axes=[df1.index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = ms.train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### RandomForest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benchmark_clf = RandomForestClassifier(n_estimators=500, max_depth=20,\n",
+    "                              random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benchmark_clf.fit(X_train, y_train)\n",
+    "y_pred = benchmark_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7991886409736308"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgbc = xgb.XGBClassifier(max_depth = 10, min_child_weight=2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bytree=1, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
+       "       max_depth=10, min_child_weight=2, missing=None, n_estimators=100,\n",
+       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
+       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "       silent=True, subsample=1)"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgbc.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Peter\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = xgbc.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[629, 101],\n",
+       "       [191, 558]], dtype=int64)"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8025693035835023"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred)"
    ]
   }
  ],
