Fixed texts in Vytvaranie modelov

--- a/deskriptivna_explorativna_analyza.ipynb
+++ b/deskriptivna_explorativna_analyza.ipynb
@@ -5368,6 +5368,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-b666bf274d0a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5385,35 +5406,6 @@
     "feature_set_1_1 = ['avglinksize', 'commonlinkratio_1', 'commonlinkratio_2', 'commonlinkratio_3', 'commonlinkratio_4',\n",
     "                   'hasDomainLink','lengthyLinkDomain','linkwordscore','numberOfLinks',\n",
     "                   'numwords_in_url', 'parametrizedLinkRatio']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['url', 'urlid', 'boilerplate', 'alchemy_category',\n",
-       "       'alchemy_category_score', 'avglinksize', 'commonlinkratio_1',\n",
-       "       'commonlinkratio_2', 'commonlinkratio_3', 'commonlinkratio_4',\n",
-       "       'compression_ratio', 'embed_ratio', 'framebased', 'frameTagRatio',\n",
-       "       'hasDomainLink', 'html_ratio', 'image_ratio', 'is_news',\n",
-       "       'lengthyLinkDomain', 'linkwordscore', 'news_front_page',\n",
-       "       'non_markup_alphanum_characters', 'numberOfLinks', 'numwords_in_url',\n",
-       "       'parametrizedLinkRatio', 'spelling_errors_ratio', 'label',\n",
-       "       'body_content', 'body_content_final'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -5480,6 +5472,13 @@
     "\n",
     "transformed_train = scaler.fit_transform(X_train)\n",
     "transformed_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predikovanie na zaklade numerickych atributov"
    ]
   },
   {
@@ -5601,14 +5600,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Text stranky (bow, tf-idf)"
+    "### Predikovanie na zaklade textovych atributov - text stranky (bow, TF-IDF)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Gausian naive bayes"
+    "##### Gausian naive bayes (bow)"
    ]
   },
   {
@@ -5744,7 +5743,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Random forest (tf idf)"
+    "##### Random forest (TF-IDF)"
    ]
   },
   {
@@ -5803,7 +5802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zvysenie poctu stromov  "
+    "**Zvysenie poctu stromov:**"
    ]
   },
   {
@@ -5850,9 +5849,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TF-IDF top 1000\n",
+    "### TF-IDF - top 1000\n",
     "\n",
-    "1000 najfrekventovanejsich slov pomocou tf idf:"
+    "1000 najfrekventovanejsich slov pomocou **TF-IDF**:"
    ]
   },
   {
