Added: Further testing in Overenie nezavislosti

--- a/deskriptivna_explorativna_analyza.ipynb
+++ b/deskriptivna_explorativna_analyza.ipynb
@@ -5945,13 +5945,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf_tfidf = RandomForestClassifier(n_estimators=2000, max_depth=20,\n",
+    "clf_tfidf = RandomForestClassifier(n_estimators=100, max_depth=8,\n",
     "                              random_state=10)\n",
-    "clf_numerical = RandomForestClassifier(n_estimators=2000, max_depth=20,\n",
+    "clf_numerical = RandomForestClassifier(n_estimators=100, max_depth=8,\n",
     "                              random_state=10)"
    ]
   },
@@ -5972,7 +5972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5986,7 +5986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -6121,7 +6121,7 @@
        "4            162               10               0.098765  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6132,7 +6132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -6153,7 +6153,7 @@
        "        0.        ]])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6178,7 +6178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6195,7 +6195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6212,7 +6212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -6221,7 +6221,7 @@
        "array([0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6232,22 +6232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.75938314, 0.24061686],\n",
-       "       [0.30699682, 0.69300318],\n",
-       "       [0.16598631, 0.83401369],\n",
+       "array([[0.44229478, 0.55770522],\n",
+       "       [0.68571582, 0.31428418],\n",
+       "       [0.44322754, 0.55677246],\n",
        "       ...,\n",
-       "       [0.21973298, 0.78026702],\n",
-       "       [0.2603086 , 0.7396914 ],\n",
-       "       [0.51024905, 0.48975095]])"
+       "       [0.50124749, 0.49875251],\n",
+       "       [0.65755032, 0.34244968],\n",
+       "       [0.63546459, 0.36453541]])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6258,7 +6258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -6282,7 +6282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6301,7 +6301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6311,15 +6311,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pocet riadkov pre numericky RF: 5064\n",
-      "Pocet riadkov pre TF-IDF RF: 3218\n"
+      "Pocet riadkov pre numericky RF: 431\n",
+      "Pocet riadkov pre TF-IDF RF: 1727\n"
      ]
     }
    ],
@@ -6337,7 +6337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6347,32 +6347,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pocet unikatnych riadkov (1. alebo 2. klasifikator mal u nich istotu vacsiu ako threshold):  5758\n"
+      "Pocet unikatnych riadkov (1. alebo 2. klasifikator mal u nich istotu vacsiu ako threshold):  2380\n"
      ]
     }
    ],
    "source": [
-    "unique_rows = set(set_numerical).union(set(set_tfidf))\n",
+    "unique_rows = set(set_numerical).union(set_tfidf)\n",
     "print('Pocet unikatnych riadkov (1. alebo 2. klasifikator mal u nich istotu vacsiu ako threshold): ',len(unique_rows))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pocet zhodnych riadkov (1. a 2. klasifikator mal u nich istotu vacsiu ako threshold):  2524\n"
+      "Pocet zhodnych riadkov (1. a 2. klasifikator mal u nich istotu vacsiu ako threshold):  438\n"
      ]
     }
    ],
@@ -6383,15 +6383,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pocet unikatnych riadkov u numerickeho klasifikatora: 2540/5064 (50.16%)\n",
-      "Pocet unikatnych riadkov u textoveho klasifikatora: 694/3218 (21.57%)\n"
+      "Pocet unikatnych riadkov u numerickeho klasifikatora: 473/911 (51.92%)\n",
+      "Pocet unikatnych riadkov u textoveho klasifikatora: 1469/1907 (77.03%)\n"
      ]
     }
    ],
@@ -6403,13 +6403,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6418,7 +6411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -6447,19 +6440,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Percentualna zhoda 43.83%\n"
+      "Percentualna zhoda 18.4%\n"
      ]
     }
    ],
    "source": [
     "print('Percentualna zhoda ' + str(round(len(common_rows) / len(unique_rows) * 100,2))+ '%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Zistovanie najmensej zavislosti"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nakolko klasifikator pracujuci s TF-IDF sa javi byt dostatocne dobry, nechajme ho nateraz tak. Zistime istoty predikcie pre TF-IDF a skusme experimentovat s mnozinami numerickych atributov."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Nastavenie "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df.label\n",
+    "\n",
+    "clf_tfidf = RandomForestClassifier(n_estimators=2000, max_depth=20, random_state=10)\n",
+    "\n",
+    "tv2 = TfidfVectorizer(max_features = 1000)\n",
+    "X_tfidf = tv2.fit_transform(df['body_content_final']).toarray()\n",
+    "\n",
+    "model_tfidf = clf_tfidf.fit(X_tfidf, y)\n",
+    "\n",
+    "class_probabilities_tfidf = model_tfidf.predict_proba(X_tfidf)\n",
+    "filtered_tfidf = return_above_threshold(class_probabilities_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Funkcia pocitajuca zavislost pre aktualny set numerickych atributov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_dependency(filtered_tfidf, X_numerical, y):\n",
+    "    clf_numerical = RandomForestClassifier(n_estimators=2000, max_depth=20, random_state=10)\n",
+    "    model_numerical = clf_numerical.fit(X_numerical, y)\n",
+    "    \n",
+    "    class_probabilities_numerical = model_numerical.predict_proba(X_numerical)\n",
+    "    \n",
+    "    filtered_num = return_above_threshold(class_probabilities_numerical)\n",
+    "\n",
+    "    set_numerical = set(filtered_num.keys())\n",
+    "    set_tfidf = set(filtered_tfidf.keys())\n",
+    "    \n",
+    "    u_rows = set(set_numerical).union(set_tfidf)\n",
+    "    c_rows = set_numerical.intersection(set_tfidf)\n",
+    "\n",
+    "    print('Percentualna zhoda ' + str(round(len(c_rows) / len(u_rows) * 100,2))+ '%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Varianta testovania zavislosti 1**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zistovanie zavislosti postupnym zmensovanim mnoziny atributov, iduc zlava -> doprava:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentualna zhoda 43.83%\n",
+      "Percentualna zhoda 42.12%\n",
+      "Percentualna zhoda 41.34%\n",
+      "Percentualna zhoda 39.63%\n",
+      "Percentualna zhoda 38.65%\n",
+      "Percentualna zhoda 38.33%\n",
+      "Percentualna zhoda 39.24%\n",
+      "Percentualna zhoda 38.87%\n",
+      "Percentualna zhoda 32.06%\n",
+      "Percentualna zhoda 29.85%\n",
+      "Percentualna zhoda 14.12%\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_of_features = len(feature_set_1_1)\n",
+    "\n",
+    "for i in range(no_of_features):\n",
+    "    find_dependency(filtered_tfidf, df.loc[:,feature_set_1_1[i:]],y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Varianta testovania zavislosti 2**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zistovanie zavislosti vynechanim atributu vynechanim atributu na indexe urcenom aktualnou iteraciou cyklu:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentualna zhoda 42.12%\n",
+      "Percentualna zhoda 43.52%\n",
+      "Percentualna zhoda 43.64%\n",
+      "Percentualna zhoda 43.29%\n",
+      "Percentualna zhoda 43.99%\n",
+      "Percentualna zhoda 43.95%\n",
+      "Percentualna zhoda 43.67%\n",
+      "Percentualna zhoda 41.2%\n",
+      "Percentualna zhoda 43.27%\n",
+      "Percentualna zhoda 43.29%\n",
+      "Percentualna zhoda 42.87%\n"
+     ]
+    }
+   ],
+   "source": [
+    "no_of_features = len(feature_set_1_1)\n",
+    "\n",
+    "for i in range(no_of_features):\n",
+    "    find_dependency(filtered_tfidf, df.loc[:,feature_set_1_1[:i] + feature_set_1_1[i+1:]],y)"
    ]
   },
   {
